# SysRobo2017

./: .gitignore  README.md
Arduino/encoder_test/: encoder_test.ino
Arduino/fsm_sound/: fsm_sound.ino
Arduino/hindbrain/: audio.ino  encoders.ino  hindbrain.ino  lights.ino  sonar.ino
Arduino/rosserial_testing/: rosserial_testing.ino
Arduino/sonar_test/: sonar_test.ino
ROS/mystery_machine/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
ROS/mystery_machine/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ROS/mystery_machine/config/original/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  odom_config.yaml
ROS/mystery_machine/launch/: #race1-3.launch#  bringup.launch  data_log.launch  exploration.launch  hw3demo.launch  lidar_following.launch  mapping.launch  multimap_nav.launch  nav_stack.launch  odom.launch  play_bag_uncompress_image.launch  play_bag_uncompress_image_no_odom.launch  race1-3.launch  race4.launch  sonar_sweep.launch  teleop.launch
ROS/mystery_machine/maps/: elev_test1.yaml  elev_test2.yaml  elevator_l.yaml  elevator_r.yaml  floor_1.yaml  floor_2.yaml  wormholes.yaml  wormholes_elev_blast.yaml
ROS/mystery_machine/msg/: SonarScan.msg
ROS/mystery_machine/rviz/: mapping.rviz  mystery_machine.rviz  navigation.rviz  odometry.rviz
ROS/mystery_machine/scripts/: arbiter.py  feature_matcher.py  lidar_following.sh  map_to_imagejpg.py  matcher_test.py  race1-3.sh  race4.sh  teleop_mode.sh
ROS/mystery_machine/src/: arbiter.cpp  cone_detection.cpp  forebrain.cpp  lidar_tf_publisher.cpp  midbrain.cpp  mission_control.cpp  odometry_publisher.cpp  race_goals.txt  sonar_tf_publisher.cpp  sonar_transform.cpp  utils.h  waypoint_follower.cpp
opencv_training/button_classifier/: TRAINING_HOWTO.md  negatives.txt  positives.txt  samples.txt
opencv_training/button_classifier/classifier/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
opencv_training/button_classifier/samples/: positive1.jpg.vec  positive10.jpg.vec  positive100.jpg.vec  positive101.jpg.vec  positive102.jpg.vec  positive103.jpg.vec  positive104.jpg.vec  positive105.jpg.vec  positive106.jpg.vec  positive107.jpg.vec  positive108.jpg.vec  (+549 more)
opencv_training/python_scripts/: panel_detector.py  panel_detector_frame.py
(+2 files in other folders)
